tests-integration/fixtures/checking/1772565780_derive_profunctor_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
WrongFirst ::
  forall (@a :: Type) (@b :: Type). (a :: Type) -> (b :: Type) -> WrongFirst (a :: Type) (b :: Type)
WrongSecond ::
  forall (@a :: Type) (@b :: Type).
    ((b :: Type) -> (a :: Type)) -> WrongSecond (a :: Type) (b :: Type)

Types
WrongFirst :: Type -> Type -> Type
WrongSecond :: Type -> Type -> Type

Derived
derive Profunctor WrongFirst
derive Profunctor WrongSecond

Roles
WrongFirst = [Representational, Representational]
WrongSecond = [Representational, Representational]

Diagnostics
error[CovariantOccurrence]: Type variable occurs in covariant position: (t4 :: Type)
  --> 6:1..6:38
  |
6 | derive instance Profunctor WrongFirst
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[ContravariantOccurrence]: Type variable occurs in contravariant position: (t7 :: Type)
  --> 9:1..9:39
  |
9 | derive instance Profunctor WrongSecond
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[CovariantOccurrence]: Type variable occurs in covariant position: (t6 :: Type)
  --> 9:1..9:39
  |
9 | derive instance Profunctor WrongSecond
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
